--- a/case study 2/Satvik/Satvik_Ajmera_QtW_CaseStudy2-Final.ipynb
+++ b/case study 2/Satvik/Satvik_Ajmera_QtW_CaseStudy2-Final.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diabetes_df = pd.read_csv(\"diabetic_data.csv\")"
+    "diabetes_df = pd.read_csv(\"../dataset_diabetes/diabetic_data.csv\")"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ids = pd.read_csv(\"IDs_mapping.csv\")"
+    "ids = pd.read_csv(\"../dataset_diabetes/IDs_mapping.csv\")"
    ]
   },
   {
@@ -1096,7 +1096,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zl/4qqdwn7s6wv34lrr9sxt7tf40000gn/T/ipykernel_1230/1365254308.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/zl/4qqdwn7s6wv34lrr9sxt7tf40000gn/T/ipykernel_3954/1365254308.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -10119,48 +10119,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "88968fa4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Init Plugin\n",
-      "Tensor Flow Version: 2.5.0\n",
-      "Keras Version: 2.5.0\n",
-      "\n",
-      "Python 3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:24:02) \n",
-      "[Clang 11.1.0 ]\n",
-      "Pandas 1.3.4\n",
-      "Scikit-Learn 1.0.1\n",
-      "GPU is available\n",
-      "Init Graph Optimizer\n",
-      "Init Kernel\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "\n",
-    "import tensorflow.keras\n",
-    "import pandas as pd\n",
-    "import sklearn as sk\n",
-    "import tensorflow as tf\n",
-    "\n",
-    "print(f\"Tensor Flow Version: {tf.__version__}\")\n",
-    "print(f\"Keras Version: {tensorflow.keras.__version__}\")\n",
-    "print()\n",
-    "print(f\"Python {sys.version}\")\n",
-    "print(f\"Pandas {pd.__version__}\")\n",
-    "print(f\"Scikit-Learn {sk.__version__}\")\n",
-    "gpu = len(tf.config.list_physical_devices('GPU'))>0\n",
-    "print(\"GPU is\", \"available\" if gpu else \"NOT AVAILABLE\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a5a48e55",
    "metadata": {},
@@ -10170,7 +10128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "id": "d237f19b",
    "metadata": {},
    "outputs": [],
@@ -10181,7 +10139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 84,
    "id": "e119f794",
    "metadata": {},
    "outputs": [
@@ -10190,38 +10148,38 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 6 candidates, totalling 30 fits\n",
-      "[CV 1/5] END C=0.001, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.608 total time=  46.6s\n",
-      "[CV 2/5] END C=0.001, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.610 total time=  52.6s\n",
-      "[CV 3/5] END C=0.001, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.605 total time=  46.5s\n",
-      "[CV 4/5] END C=0.001, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.608 total time=  48.0s\n",
-      "[CV 5/5] END C=0.001, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.609 total time=  48.0s\n",
-      "[CV 1/5] END C=0.001, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.613 total time=   0.7s\n",
+      "[CV 1/5] END C=0.001, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.608 total time=  47.2s\n",
+      "[CV 2/5] END C=0.001, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.610 total time=  39.9s\n",
+      "[CV 3/5] END C=0.001, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.605 total time=  47.9s\n",
+      "[CV 4/5] END C=0.001, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.608 total time=  48.4s\n",
+      "[CV 5/5] END C=0.001, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.609 total time=  48.6s\n",
+      "[CV 1/5] END C=0.001, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.613 total time=   0.8s\n",
       "[CV 2/5] END C=0.001, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.615 total time=   0.6s\n",
-      "[CV 3/5] END C=0.001, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.616 total time=   0.7s\n",
-      "[CV 4/5] END C=0.001, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.616 total time=   0.7s\n",
-      "[CV 5/5] END C=0.001, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.614 total time=   0.7s\n",
-      "[CV 1/5] END C=0.01, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.612 total time=  21.3s\n",
-      "[CV 2/5] END C=0.01, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.616 total time=  10.9s\n",
-      "[CV 3/5] END C=0.01, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.615 total time=  17.3s\n",
-      "[CV 4/5] END C=0.01, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.615 total time=  26.5s\n",
-      "[CV 5/5] END C=0.01, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.615 total time=  15.9s\n",
-      "[CV 1/5] END C=0.01, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.619 total time=   3.2s\n",
-      "[CV 2/5] END C=0.01, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.621 total time=   2.6s\n",
-      "[CV 3/5] END C=0.01, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.624 total time=   3.1s\n",
-      "[CV 4/5] END C=0.01, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.621 total time=   3.2s\n",
-      "[CV 5/5] END C=0.01, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.617 total time=   3.1s\n",
+      "[CV 3/5] END C=0.001, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.616 total time=   0.9s\n",
+      "[CV 4/5] END C=0.001, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.616 total time=   0.8s\n",
+      "[CV 5/5] END C=0.001, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.614 total time=   0.8s\n",
+      "[CV 1/5] END C=0.01, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.612 total time=  21.9s\n",
+      "[CV 2/5] END C=0.01, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.616 total time=  10.6s\n",
+      "[CV 3/5] END C=0.01, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.615 total time=  17.7s\n",
+      "[CV 4/5] END C=0.01, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.615 total time=  26.8s\n",
+      "[CV 5/5] END C=0.01, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.615 total time=  15.3s\n",
+      "[CV 1/5] END C=0.01, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.619 total time=   3.0s\n",
+      "[CV 2/5] END C=0.01, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.621 total time=   2.5s\n",
+      "[CV 3/5] END C=0.01, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.624 total time=   3.0s\n",
+      "[CV 4/5] END C=0.01, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.621 total time=   3.0s\n",
+      "[CV 5/5] END C=0.01, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.617 total time=   3.0s\n",
       "[CV 1/5] END C=0.1, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.619 total time= 2.7min\n",
-      "[CV 2/5] END C=0.1, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.624 total time= 2.3min\n",
-      "[CV 3/5] END C=0.1, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.624 total time= 2.9min\n",
+      "[CV 2/5] END C=0.1, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.624 total time= 2.4min\n",
+      "[CV 3/5] END C=0.1, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.624 total time= 2.8min\n",
       "[CV 4/5] END C=0.1, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.622 total time= 2.9min\n",
-      "[CV 5/5] END C=0.1, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.616 total time= 2.9min\n",
-      "[CV 1/5] END C=0.1, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.621 total time=  13.4s\n",
-      "[CV 2/5] END C=0.1, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.623 total time=  11.5s\n",
-      "[CV 3/5] END C=0.1, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.623 total time=  13.1s\n",
-      "[CV 4/5] END C=0.1, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.622 total time=  12.8s\n",
-      "[CV 5/5] END C=0.1, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.617 total time=  13.0s\n",
-      "CPU times: user 20min 48s, sys: 4.19 s, total: 20min 52s\n",
-      "Wall time: 20min 52s\n"
+      "[CV 5/5] END C=0.1, max_iter=5000, penalty=l1, random_state=42, solver=saga;, score=0.616 total time= 2.8min\n",
+      "[CV 1/5] END C=0.1, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.621 total time=  12.4s\n",
+      "[CV 2/5] END C=0.1, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.623 total time=  10.5s\n",
+      "[CV 3/5] END C=0.1, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.623 total time=  12.0s\n",
+      "[CV 4/5] END C=0.1, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.622 total time=  11.8s\n",
+      "[CV 5/5] END C=0.1, max_iter=5000, penalty=l2, random_state=42, solver=saga;, score=0.617 total time=  12.0s\n",
+      "CPU times: user 20min 25s, sys: 5.52 s, total: 20min 30s\n",
+      "Wall time: 20min 31s\n"
      ]
     },
     {
@@ -10236,7 +10194,7 @@
        "             scoring='accuracy', verbose=3)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10268,7 +10226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 85,
    "id": "77e2a092",
    "metadata": {
     "scrolled": true
@@ -10280,7 +10238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "id": "a92743f6",
    "metadata": {},
    "outputs": [
@@ -10299,7 +10257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 87,
    "id": "2e4bf637",
    "metadata": {},
    "outputs": [],
@@ -10309,7 +10267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 88,
    "id": "118c92c4",
    "metadata": {},
    "outputs": [
@@ -10327,7 +10285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 89,
    "id": "f941a269",
    "metadata": {},
    "outputs": [],
@@ -10337,7 +10295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 90,
    "id": "203e37ee",
    "metadata": {},
    "outputs": [
@@ -10352,6 +10310,14 @@
    "source": [
     "print('Highest Accuracy', GridSearch.best_score_ )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eed0d146",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -10369,6 +10335,69 @@
     "Because, logistic regression assumes independence, we dropped the duplicates and kept only the first, based on the subset of patient number. Thus, our training set went from 101,000 observations to 71,518 observations where each observation is a unique patient. From there, we joined all the admission_type_id, discharge_disposition_id, admission_source_id with their respective names and removed the NaN because they were defined as null in the ID_mappings csv. This resulted in the removal of 12,794 observations that contain at least one NaN value in admission_type_id, discharge_disposition_id, admission_source_id. From there, there weight and payer code were removed since there was over 40% NaNs in those columns, there would be no way to impute these columns. Similar to the paper, we removed levels from the discharge_disposition_id feature that were related to hospice and expired, because this would bias our model's predictions for readmittance. For medical specialty and race, we decided to impute the NaNs as \"Missing\" because it makes sense to learn these features in the model and not remove them. We dropped the encounter_id and patient_nbr features, since these are just used for patient and encounter identification. In the end, we reduced the data to 62,056 observations with 45 features. The response variable was recoded as an integer for each class between 1 to 3 (\"NO\":1,\">30\":3,\"<30\":2). For preprocessing, we used sklearn's pipeline to standardard scale and one-hot-encode the categorical variables. \n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3aaabb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9af82bef",
+   "metadata": {},
+   "source": [
+    "# Variable Importance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "e0615a87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_features_new = ['time_in_hospital', 'num_lab_procedures', 'num_procedures',\n",
+    "                    'num_medications','number_outpatient','number_emergency',\n",
+    "                    'number_inpatient','number_diagnoses']\n",
+    "\n",
+    "X_columns = final_df.drop(\"readmitted\", axis = 1).copy()\n",
+    "X_columns = pipeline.fit(X_columns)\n",
+    "X_columns.named_steps[\"preprocessor\"].transformers_[1][1].named_steps[\"onehot\"]\n",
+    "\n",
+    "column_name = X_columns.named_steps['preprocessor'].transformers_[1][1]\\\n",
+    "   .named_steps['onehot'].get_feature_names_out(categorical_features)\n",
+    "\n",
+    "column_name = list(column_name)\n",
+    "column_name[:0] = numeric_features_new\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9e49c90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_best_est"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a52f2d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coefficients = pd.concat([pd.DataFrame(column_name),pd.DataFrame(np.transpose(best_lr.coef_))], axis = 1)\n",
+    "coefficients.columns = [\"Features\",\"Weights\"]\n",
+    "coefficients[\"Absolute_Value_Weights\"] = coefficients[\"Weights\"]\n",
+    "coefficients[\"Absolute_Value_Weights\"]= coefficients[\"Absolute_Value_Weights\"].abs()\n",
+    "coef_sorted = coefficients.sort_values(by=\"Absolute_Value_Weights\", ascending=False)\n",
+    "coef_sorted = coef_sorted.head(15)"
    ]
   }
  ],
