--- a/case study 2/Satvik/Satvik_Ajmera_QtW_CaseStudy2-Final.ipynb
+++ b/case study 2/Satvik/Satvik_Ajmera_QtW_CaseStudy2-Final.ipynb
@@ -10313,8 +10313,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "id": "d12f8859",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.03307155, -0.01045793,  0.01276606, ..., -0.15874767,\n",
+       "         0.01064721,  0.24487471],\n",
+       "       [-0.00112239,  0.01784421,  0.00469314, ...,  0.21658942,\n",
+       "        -0.0036955 , -0.03675582],\n",
+       "       [ 0.03419394, -0.00738629, -0.01745919, ..., -0.05784175,\n",
+       "        -0.0069517 , -0.20811889]])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr_best_est.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "eed0d146",
+   "id": "eb6c0bc4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -10339,15 +10365,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a3aaabb9",
+   "execution_count": 108,
+   "id": "d7803720",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====Iteration 0  ====\n",
+      "accuracy: 0.6208507895584918\n",
+      "====Iteration 1  ====\n",
+      "accuracy: 0.6232678053496616\n",
+      "====Iteration 2  ====\n",
+      "accuracy: 0.6227844021914276\n",
+      "====Iteration 3  ====\n",
+      "accuracy: 0.6223009990331937\n",
+      "====Iteration 4  ====\n",
+      "accuracy: 0.616822429906542\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn import metrics as mt\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "final_lr = LogisticRegression(C=0.1, max_iter=5000, multi_class='multinomial',\n",
+    "                   random_state=42, solver='saga')\n",
+    "\n",
+    "iter_num=0\n",
+    "for train_indices, test_indices in sss_cv.split(X_scaled,y): \n",
+    "#     start = time.time()\n",
+    "#     elapsed_time = (time.time() - start)\n",
+    "    X_train = X_scaled[train_indices]\n",
+    "    y_train = y[train_indices]\n",
+    "    \n",
+    "    X_test = X_scaled[test_indices]\n",
+    "    y_test = y[test_indices]\n",
+    "    final_lr.fit(X_train,y_train)  # train object\n",
+    "\n",
+    "    y_hat = final_lr.predict(X_test) # get test set predictions\n",
+    "    print(\"====Iteration\",iter_num,\" ====\")\n",
+    "    acc = mt.accuracy_score(y_test,y_hat)\n",
+    "    print('accuracy:', acc )\n",
+    "    iter_num+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "24bba8ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'multinomial'"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_lr."
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "9af82bef",
+   "id": "02c4342f",
    "metadata": {},
    "source": [
     "# Variable Importance"
@@ -10355,10 +10444,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "e0615a87",
+   "execution_count": 123,
+   "id": "4c035deb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/satvikajmera/miniforge3/envs/tensorflow/lib/python3.9/site-packages/sklearn/utils/deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
+      "  warnings.warn(msg, category=FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "numeric_features_new = ['time_in_hospital', 'num_lab_procedures', 'num_procedures',\n",
     "                    'num_medications','number_outpatient','number_emergency',\n",
@@ -10369,7 +10467,7 @@
     "X_columns.named_steps[\"preprocessor\"].transformers_[1][1].named_steps[\"onehot\"]\n",
     "\n",
     "column_name = X_columns.named_steps['preprocessor'].transformers_[1][1]\\\n",
-    "   .named_steps['onehot'].get_feature_names_out(categorical_features)\n",
+    "   .named_steps['onehot'].get_feature_names(categorical_features)\n",
     "\n",
     "column_name = list(column_name)\n",
     "column_name[:0] = numeric_features_new\n"
@@ -10377,28 +10475,261 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a9e49c90",
+   "execution_count": 129,
+   "id": "5a0543b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method LogisticRegression.predict_proba of LogisticRegression(C=0.1, max_iter=5000, multi_class='multinomial',\n",
+       "                   random_state=42, solver='saga')>"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr_best_est.predict_proba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "fea93a2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method LogisticRegression.predict_log_proba of LogisticRegression(C=0.1, max_iter=5000, multi_class='multinomial',\n",
+       "                   random_state=42, solver='saga')>"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr_best_est.predict_log_proba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "12615a4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method LogisticRegression.predict_proba of LogisticRegression(C=0.1, max_iter=5000, multi_class='multinomial',\n",
+      "                   random_state=42, solver='saga')>\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_best_est.predict_proba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "cdb47666",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method ClassifierMixin.score of LogisticRegression(C=0.1, max_iter=5000, multi_class='multinomial',\n",
+       "                   random_state=42, solver='saga')>"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr_best_est.score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "fab37230",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr_best_est"
+    "coefficients = pd.concat([pd.DataFrame(column_name),pd.DataFrame(np.transpose(lr_best_est.coef_))], axis = 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "a31e7805",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>time_in_hospital</td>\n",
+       "      <td>-0.031061</td>\n",
+       "      <td>-0.000903</td>\n",
+       "      <td>0.031965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>num_lab_procedures</td>\n",
+       "      <td>-0.009888</td>\n",
+       "      <td>0.019101</td>\n",
+       "      <td>-0.009214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>num_procedures</td>\n",
+       "      <td>0.015704</td>\n",
+       "      <td>0.002965</td>\n",
+       "      <td>-0.018669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>num_medications</td>\n",
+       "      <td>0.004646</td>\n",
+       "      <td>0.008529</td>\n",
+       "      <td>-0.013174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>number_outpatient</td>\n",
+       "      <td>-0.051810</td>\n",
+       "      <td>-0.007770</td>\n",
+       "      <td>0.059580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2315</th>\n",
+       "      <td>admission_source_id_z_ Transfer from hospital ...</td>\n",
+       "      <td>0.092651</td>\n",
+       "      <td>-0.021975</td>\n",
+       "      <td>-0.070676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2316</th>\n",
+       "      <td>admission_source_id_z_Clinic Referral</td>\n",
+       "      <td>0.089941</td>\n",
+       "      <td>-0.091857</td>\n",
+       "      <td>0.001916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2317</th>\n",
+       "      <td>admission_source_id_z_HMO Referral</td>\n",
+       "      <td>-0.195877</td>\n",
+       "      <td>0.237743</td>\n",
+       "      <td>-0.041865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2318</th>\n",
+       "      <td>admission_source_id_z_Normal Delivery</td>\n",
+       "      <td>0.009862</td>\n",
+       "      <td>-0.003557</td>\n",
+       "      <td>-0.006305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2319</th>\n",
+       "      <td>admission_source_id_z_Transfer from a hospital</td>\n",
+       "      <td>0.253927</td>\n",
+       "      <td>-0.035944</td>\n",
+       "      <td>-0.217983</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2320 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      0         0         1  \\\n",
+       "0                                      time_in_hospital -0.031061 -0.000903   \n",
+       "1                                    num_lab_procedures -0.009888  0.019101   \n",
+       "2                                        num_procedures  0.015704  0.002965   \n",
+       "3                                       num_medications  0.004646  0.008529   \n",
+       "4                                     number_outpatient -0.051810 -0.007770   \n",
+       "...                                                 ...       ...       ...   \n",
+       "2315  admission_source_id_z_ Transfer from hospital ...  0.092651 -0.021975   \n",
+       "2316              admission_source_id_z_Clinic Referral  0.089941 -0.091857   \n",
+       "2317                 admission_source_id_z_HMO Referral -0.195877  0.237743   \n",
+       "2318              admission_source_id_z_Normal Delivery  0.009862 -0.003557   \n",
+       "2319     admission_source_id_z_Transfer from a hospital  0.253927 -0.035944   \n",
+       "\n",
+       "             2  \n",
+       "0     0.031965  \n",
+       "1    -0.009214  \n",
+       "2    -0.018669  \n",
+       "3    -0.013174  \n",
+       "4     0.059580  \n",
+       "...        ...  \n",
+       "2315 -0.070676  \n",
+       "2316  0.001916  \n",
+       "2317 -0.041865  \n",
+       "2318 -0.006305  \n",
+       "2319 -0.217983  \n",
+       "\n",
+       "[2320 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coefficients"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a52f2d8",
+   "id": "e8449ba7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "coefficients = pd.concat([pd.DataFrame(column_name),pd.DataFrame(np.transpose(best_lr.coef_))], axis = 1)\n",
-    "coefficients.columns = [\"Features\",\"Weights\"]\n",
-    "coefficients[\"Absolute_Value_Weights\"] = coefficients[\"Weights\"]\n",
-    "coefficients[\"Absolute_Value_Weights\"]= coefficients[\"Absolute_Value_Weights\"].abs()\n",
-    "coef_sorted = coefficients.sort_values(by=\"Absolute_Value_Weights\", ascending=False)\n",
-    "coef_sorted = coef_sorted.head(15)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
