Added labels/targets for emails

--- a/case study 3/Taylor/test_csv_import.ipynb
+++ b/case study 3/Taylor/test_csv_import.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -38,34 +38,88 @@
        "      <th>Subject</th>\n",
        "      <th>From</th>\n",
        "      <th>Body</th>\n",
+       "      <th>isSpam</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Re: New Sequences Window</td>\n",
-       "      <td>Robert Elz &lt;kre@munnari.OZ.AU&gt;</td>\n",
-       "      <td>Date:        Wed, 21 Aug 2002 10:54:46 -05...</td>\n",
+       "      <th>9348</th>\n",
+       "      <td>Preferred Non-Smoker Rates for Smokers</td>\n",
+       "      <td>IQ - TBA &lt;tba@insiq.us&gt;</td>\n",
+       "      <td>b' \\t Preferred Non-Smoker\\n \\t\\n Just what th...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9349</th>\n",
+       "      <td>How to get 10,000 FREE hits per day to any web...</td>\n",
+       "      <td>Mike &lt;raye@yahoo.lv&gt;</td>\n",
+       "      <td>b'Dear Subscriber,\\n\\nIf I could show you a wa...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9350</th>\n",
+       "      <td>Cannabis Difference</td>\n",
+       "      <td>\"Mr. Clean\" &lt;cweqx@dialix.oz.au&gt;</td>\n",
+       "      <td>b'****Mid-Summer Customer Appreciation SALE!**...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9351</th>\n",
+       "      <td>[ILUG] WILSON  KAMELA</td>\n",
+       "      <td>\"wilsonkamela400@netscape.net\" &lt;wilsonkamela50...</td>\n",
+       "      <td>b\"ATTN:SIR/MADAN      \\n\\n                    ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9352</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>b'mv 00001.317e78fa8ee2f54cd4890fdc09ba8176 00...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    Subject                            From  \\\n",
-       "0  Re: New Sequences Window  Robert Elz <kre@munnari.OZ.AU>   \n",
+       "                                                Subject  \\\n",
+       "9348             Preferred Non-Smoker Rates for Smokers   \n",
+       "9349  How to get 10,000 FREE hits per day to any web...   \n",
+       "9350                                Cannabis Difference   \n",
+       "9351                              [ILUG] WILSON  KAMELA   \n",
+       "9352                                                NaN   \n",
        "\n",
-       "                                                Body  \n",
-       "0      Date:        Wed, 21 Aug 2002 10:54:46 -05...  "
+       "                                                   From  \\\n",
+       "9348                            IQ - TBA <tba@insiq.us>   \n",
+       "9349                               Mike <raye@yahoo.lv>   \n",
+       "9350                   \"Mr. Clean\" <cweqx@dialix.oz.au>   \n",
+       "9351  \"wilsonkamela400@netscape.net\" <wilsonkamela50...   \n",
+       "9352                                                NaN   \n",
+       "\n",
+       "                                                   Body  isSpam  \n",
+       "9348  b' \\t Preferred Non-Smoker\\n \\t\\n Just what th...       1  \n",
+       "9349  b'Dear Subscriber,\\n\\nIf I could show you a wa...       1  \n",
+       "9350  b'****Mid-Summer Customer Appreciation SALE!**...       1  \n",
+       "9351  b\"ATTN:SIR/MADAN      \\n\\n                    ...       1  \n",
+       "9352  b'mv 00001.317e78fa8ee2f54cd4890fdc09ba8176 00...       1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv(\"test.csv\", header=0)"
+    "pd.read_csv(\"test.csv\", header=0).tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_csv(\"test.csv\", header=0).head()"
    ]
   }
  ],
