Updated sample pandas csv import

--- a/case study 3/Taylor/test_csv_import.ipynb
+++ b/case study 3/Taylor/test_csv_import.ipynb
@@ -115,9 +115,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Subject</th>\n",
+       "      <th>From</th>\n",
+       "      <th>Body</th>\n",
+       "      <th>isSpam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Re: New Sequences Window</td>\n",
+       "      <td>Robert Elz &lt;kre@munnari.OZ.AU&gt;</td>\n",
+       "      <td>b'    Date:        Wed, 21 Aug 2002 10:54:46 -...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[zzzzteana] RE: Alexander</td>\n",
+       "      <td>Steve Burt &lt;Steve_Burt@cursor-system.com&gt;</td>\n",
+       "      <td>b\"Martin A posted:\\nTassos Papadopoulos, the G...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[zzzzteana] Moscow bomber</td>\n",
+       "      <td>Tim Chapman &lt;timc@2ubh.com&gt;</td>\n",
+       "      <td>b\"Man Threatens Explosion In Moscow \\n\\nThursd...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[IRR] Klez: The Virus That  Won't Die</td>\n",
+       "      <td>Monty Solomon &lt;monty@roscom.com&gt;</td>\n",
+       "      <td>b\"Klez: The Virus That Won't Die\\n \\nAlready t...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Re: [zzzzteana] Nothing like mama used to make</td>\n",
+       "      <td>Stewart Smith &lt;Stewart.Smith@ee.ed.ac.uk&gt;</td>\n",
+       "      <td>b\"&gt;  in adding cream to spaghetti carbonara, w...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          Subject  \\\n",
+       "0                        Re: New Sequences Window   \n",
+       "1                       [zzzzteana] RE: Alexander   \n",
+       "2                       [zzzzteana] Moscow bomber   \n",
+       "3           [IRR] Klez: The Virus That  Won't Die   \n",
+       "4  Re: [zzzzteana] Nothing like mama used to make   \n",
+       "\n",
+       "                                        From  \\\n",
+       "0             Robert Elz <kre@munnari.OZ.AU>   \n",
+       "1  Steve Burt <Steve_Burt@cursor-system.com>   \n",
+       "2                Tim Chapman <timc@2ubh.com>   \n",
+       "3           Monty Solomon <monty@roscom.com>   \n",
+       "4  Stewart Smith <Stewart.Smith@ee.ed.ac.uk>   \n",
+       "\n",
+       "                                                Body  isSpam  \n",
+       "0  b'    Date:        Wed, 21 Aug 2002 10:54:46 -...       0  \n",
+       "1  b\"Martin A posted:\\nTassos Papadopoulos, the G...       0  \n",
+       "2  b\"Man Threatens Explosion In Moscow \\n\\nThursd...       0  \n",
+       "3  b\"Klez: The Virus That Won't Die\\n \\nAlready t...       0  \n",
+       "4  b\">  in adding cream to spaghetti carbonara, w...       0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.read_csv(\"test.csv\", header=0).head()"
    ]
