added all the data into csv

--- a/case study 3/Satvik/Model_S.ipynb
+++ b/case study 3/Satvik/Model_S.ipynb
@@ -42,6 +42,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"test.csv\", header=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
