--- a/case study 3/Satvik/Model_S.ipynb
+++ b/case study 3/Satvik/Model_S.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,30 +30,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = dirname(dirname(abspath(__file__)))"
+    "d = dirname(dirname(abspath('__file__')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "location = f\"{d}/case study 3/\""
+    "#location = f\"{d}/case study 3/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "emails = {\"index\":[]}\n",
-    "for path, subdirectories, filelist in os.walk(os.path.join(location,\"SpamAssassinMessages\")):\n",
+    "for path, subdirectories, filelist in os.walk(os.path.join(d,\"SpamAssassinMessages\")):\n",
     "    for f in filelist:\n",
     "        \n",
     "        label = 0 if \"ham\" in path.lower() else 1\n",
@@ -77,7 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"spam_train.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +97,7 @@
        "Name: isSpam, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
