--- a/case study 3/Satvik/Model_S 2.ipynb
+++ b/case study 3/Satvik/Model_S 2.ipynb
@@ -721,11 +721,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_dbscan = df_X.copy()"
+    "X_agg = df_X.copy()"
    ]
   },
   {
@@ -1028,11 +1028,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cluster import DBSCAN"
+    "from sklearn.cluster import AgglomerativeClustering"
    ]
   },
   {
@@ -1041,17 +1041,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dbscn = DBSCAN(eps=0.1, min_samples=5)\n",
-    "dbscn.fit(X_dbscan)\n",
-    "#newfeature_1 = cls1_dbscn.labels_ # the labels from kmeans clustering\n",
+    "agg = AgglomerativeClustering(n_clusters=3)\n",
+    "agg.fit(X.toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_agg[\"agg\"] = agg.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    9318\n",
+       "1       2\n",
+       "Name: agg, dtype: int64"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_agg[\"agg\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<9320x70543 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 1114736 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_agg = csr_matrix(X_agg.values)\n",
+    "X_agg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Negative values in data passed to MultinomialNB (input X)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;32m~/miniforge3/envs/tensorflow/lib/python3.9/site-packages/sklearn/naive_bayes.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    688\u001b[0m         \u001b[0mn_classes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    689\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_init_counters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_classes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 690\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    691\u001b[0m         \u001b[0malpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_alpha\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    692\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_update_feature_log_prob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniforge3/envs/tensorflow/lib/python3.9/site-packages/sklearn/naive_bayes.py\u001b[0m in \u001b[0;36m_count\u001b[0;34m(self, X, Y)\u001b[0m\n\u001b[1;32m    861\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    862\u001b[0m         \u001b[0;34m\"\"\"Count and smooth feature occurrences.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 863\u001b[0;31m         \u001b[0mcheck_non_negative\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"MultinomialNB (input X)\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    864\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_count_\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0msafe_sparse_dot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    865\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclass_count_\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniforge3/envs/tensorflow/lib/python3.9/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_non_negative\u001b[0;34m(X, whom)\u001b[0m\n\u001b[1;32m   1234\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1235\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mX_min\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1236\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Negative values in data passed to %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mwhom\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1237\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1238\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Negative values in data passed to MultinomialNB (input X)"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn import metrics as mt\n",
+    "import time\n",
     "\n",
-    "# original_X = X_us.drop(['stays_in_week_nights','stays_in_weekend_nights'], axis=1)\n",
-    "# final_X = np.column_stack((original_X,pd.get_dummies(newfeature_1)))\n",
+    "skf = StratifiedKFold(random_state=42, n_splits=10,shuffle=True)\n",
+    "nb = MultinomialNB()\n",
     "\n",
-    "# acc = cross_val_score(clf,final_X,y=y_us,cv=cv)\n",
-    "# params.append((eps,mpts,acc.mean()*100,acc.std()*100))\n",
+    "acc_scores = []\n",
     "\n",
-    "# print(\"For Eps\", eps, \"For min pts\",mpts,\"The average accuracy = \", acc.mean()*100, \"+-\", acc.std()*100)"
+    "iter_num=0\n",
+    "\n",
+    "for train_indices, test_indices in skf.split(X_dbscan,y): \n",
+    "    X_train = X_dbscan[train_indices]\n",
+    "    y_train = y[train_indices]\n",
+    "    \n",
+    "    X_test = X_dbscan[test_indices]\n",
+    "    y_test = y[test_indices]\n",
+    "    nb.fit(X_train,y_train)  # train object\n",
+    "\n",
+    "    y_hat = nb.predict(X_test) # get test set predictions\n",
+    "    print(\"====Iteration\",iter_num,\" ====\")\n",
+    "    acc = mt.accuracy_score(y_test,y_hat)\n",
+    "    acc_scores.append(acc)\n",
+    "    print('Accuracy:', acc)\n",
+    "    iter_num+=1\n",
+    "print(\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\")   \n",
+    "print('Mean Accuracy:', np.mean(acc_scores))"
    ]
   },
   {
